Grupo 09/y.output
Terminals unused in grammar

   SALTO_LINEA


Estado 82 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa_ $end

    1 programa_: programa

    2 programa: programa sentencia
    3         | sentencia

    4 sentencia: iteracion
    5          | seleccion
    6          | asignacion
    7          | imprimir
    8          | leer
    9          | declaracion

   10 declaracion: DIM_T OP_MENOR dupla_asig OP_MAYOR

   11 dupla_asig: ID_T SEPARADOR_T dupla_asig SEPARADOR_T tipo
   12           | ID_T OP_MAYOR AS_T OP_MENOR tipo

   13 tipo: FLOAT_T
   14     | INTEGER_T
   15     | STRING_T

   16 $@1: /* vacío */

   17 $@2: /* vacío */

   18 iteracion: WHILE_T $@1 PARENT_A condicion PARENT_C LLAVE_A programa $@2 LLAVE_C

   19 seleccion: seleccion_con_else
   20          | seleccion_sin_else

   21 $@3: /* vacío */

   22 seleccion_con_else: IF_T PARENT_A condicion PARENT_C argumento_sel ELSE_T $@3 argumento_sel

   23 seleccion_sin_else: IF_T PARENT_A condicion PARENT_C argumento_sel

   24 argumento_sel: LLAVE_A programa LLAVE_C
   25              | sentencia

   26 asignacion: ID_T OP_AS expresion SEP_LINEA
   27           | CONST_T ID_T OP_AS expresion SEP_LINEA

   28 $@4: /* vacío */

   29 imprimir: TOKEN_PUT $@4 elemento SEP_LINEA

   30 leer: GET_T ID_T SEP_LINEA

   31 condicion: comparacion

   32 $@5: /* vacío */

   33 condicion: condicion TOKEN_AND $@5 comparacion

   34 $@6: /* vacío */

   35 condicion: condicion TOKEN_OR $@6 comparacion
   36          | TOKEN_NOT comparacion

   37 comparacion: expresion comparador termino
   38            | PARENT_A expresion comparador termino PARENT_C

   39 comparador: OP_DISTINTO
   40           | OP_COMP
   41           | OP_MAYORIGUAL
   42           | OP_MAYOR
   43           | OP_MENORIGUAL
   44           | OP_MENOR

   45 expresion: expresion OP_SUM termino
   46          | expresion OP_MENOS termino
   47          | termino

   48 termino: termino OP_MUL elemento
   49        | termino OP_DIVISION elemento
   50        | elemento

   51 elemento: PARENT_A expresion PARENT_C

   52 $@7: /* vacío */

   53 elemento: MAX_TOKEN $@7 PARENT_A argumentos PARENT_C
   54         | ID_T
   55         | CONST_INT
   56         | CONST_FLOAT
   57         | CONST_STRING

   58 $@8: /* vacío */

   59 $@9: /* vacío */

   60 argumentos: argumentos $@8 SEPARADOR_T $@9 expresion
   61           | expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
CONST_INT (258) 55
CONST_FLOAT (259) 56
CONST_STRING (260) 57
ID_T (261) 11 12 26 27 30 54
ELSE_T (262) 22
IF_T (263) 22 23
OP_DISTINTO (264) 39
OP_COMP (265) 40
OP_MAYORIGUAL (266) 41
OP_MAYOR (267) 10 12 42
OP_MENOR (268) 10 12 44
OP_MENORIGUAL (269) 43
LLAVE_C (270) 18 24
LLAVE_A (271) 18 24
PARENT_C (272) 18 22 23 38 51 53
PARENT_A (273) 18 22 23 38 51 53
OP_DIVISION (274) 49
OP_AS (275) 26 27
OP_SUM (276) 45
OP_MENOS (277) 46
OP_MUL (278) 48
WHILE_T (279) 18
SEP_LINEA (280) 26 27 29 30
SEPARADOR_T (281) 11 60
FLOAT_T (282) 13
INTEGER_T (283) 14
STRING_T (284) 15
DIM_T (285) 10
AS_T (286) 12
TOKEN_PUT (287) 29
GET_T (288) 30
CONST_T (289) 27
TOKEN_AND (290) 33
TOKEN_OR (291) 35
TOKEN_NOT (292) 36
MAX_TOKEN (293) 53
SALTO_LINEA (294)


No terminales con las reglas donde aparecen

$accept (40)
    en la izquierda: 0
programa_ (41)
    en la izquierda: 1, en la derecha: 0
programa (42)
    en la izquierda: 2 3, en la derecha: 1 2 18 24
sentencia (43)
    en la izquierda: 4 5 6 7 8 9, en la derecha: 2 3 25
declaracion (44)
    en la izquierda: 10, en la derecha: 9
dupla_asig (45)
    en la izquierda: 11 12, en la derecha: 10 11
tipo (46)
    en la izquierda: 13 14 15, en la derecha: 11 12
iteracion (47)
    en la izquierda: 18, en la derecha: 4
$@1 (48)
    en la izquierda: 16, en la derecha: 18
$@2 (49)
    en la izquierda: 17, en la derecha: 18
seleccion (50)
    en la izquierda: 19 20, en la derecha: 5
seleccion_con_else (51)
    en la izquierda: 22, en la derecha: 19
$@3 (52)
    en la izquierda: 21, en la derecha: 22
seleccion_sin_else (53)
    en la izquierda: 23, en la derecha: 20
argumento_sel (54)
    en la izquierda: 24 25, en la derecha: 22 23
asignacion (55)
    en la izquierda: 26 27, en la derecha: 6
imprimir (56)
    en la izquierda: 29, en la derecha: 7
$@4 (57)
    en la izquierda: 28, en la derecha: 29
leer (58)
    en la izquierda: 30, en la derecha: 8
condicion (59)
    en la izquierda: 31 33 35 36, en la derecha: 18 22 23 33 35
$@5 (60)
    en la izquierda: 32, en la derecha: 33
$@6 (61)
    en la izquierda: 34, en la derecha: 35
comparacion (62)
    en la izquierda: 37 38, en la derecha: 31 33 35 36
comparador (63)
    en la izquierda: 39 40 41 42 43 44, en la derecha: 37 38
expresion (64)
    en la izquierda: 45 46 47, en la derecha: 26 27 37 38 45 46 51
    60 61
termino (65)
    en la izquierda: 48 49 50, en la derecha: 37 38 45 46 47 48 49
elemento (66)
    en la izquierda: 51 53 54 55 56 57, en la derecha: 29 48 49 50
$@7 (67)
    en la izquierda: 52, en la derecha: 53
argumentos (68)
    en la izquierda: 60 61, en la derecha: 53 60
$@8 (69)
    en la izquierda: 58, en la derecha: 60
$@9 (70)
    en la izquierda: 59, en la derecha: 60


estado 0

    0 $accept: . programa_ $end

    ID_T       desplazar e ir al estado 1
    IF_T       desplazar e ir al estado 2
    WHILE_T    desplazar e ir al estado 3
    DIM_T      desplazar e ir al estado 4
    TOKEN_PUT  desplazar e ir al estado 5
    GET_T      desplazar e ir al estado 6
    CONST_T    desplazar e ir al estado 7

    programa_           ir al estado 8
    programa            ir al estado 9
    sentencia           ir al estado 10
    declaracion         ir al estado 11
    iteracion           ir al estado 12
    seleccion           ir al estado 13
    seleccion_con_else  ir al estado 14
    seleccion_sin_else  ir al estado 15
    asignacion          ir al estado 16
    imprimir            ir al estado 17
    leer                ir al estado 18


estado 1

   26 asignacion: ID_T . OP_AS expresion SEP_LINEA

    OP_AS  desplazar e ir al estado 19


estado 2

   22 seleccion_con_else: IF_T . PARENT_A condicion PARENT_C argumento_sel ELSE_T $@3 argumento_sel
   23 seleccion_sin_else: IF_T . PARENT_A condicion PARENT_C argumento_sel

    PARENT_A  desplazar e ir al estado 20


estado 3

   18 iteracion: WHILE_T . $@1 PARENT_A condicion PARENT_C LLAVE_A programa $@2 LLAVE_C

    $default  reduce usando la regla 16 ($@1)

    $@1  ir al estado 21


estado 4

   10 declaracion: DIM_T . OP_MENOR dupla_asig OP_MAYOR

    OP_MENOR  desplazar e ir al estado 22


estado 5

   29 imprimir: TOKEN_PUT . $@4 elemento SEP_LINEA

    $default  reduce usando la regla 28 ($@4)

    $@4  ir al estado 23


estado 6

   30 leer: GET_T . ID_T SEP_LINEA

    ID_T  desplazar e ir al estado 24


estado 7

   27 asignacion: CONST_T . ID_T OP_AS expresion SEP_LINEA

    ID_T  desplazar e ir al estado 25


estado 8

    0 $accept: programa_ . $end

    $end  desplazar e ir al estado 26


estado 9

    1 programa_: programa .
    2 programa: programa . sentencia

    ID_T       desplazar e ir al estado 1
    IF_T       desplazar e ir al estado 2
    WHILE_T    desplazar e ir al estado 3
    DIM_T      desplazar e ir al estado 4
    TOKEN_PUT  desplazar e ir al estado 5
    GET_T      desplazar e ir al estado 6
    CONST_T    desplazar e ir al estado 7

    $default  reduce usando la regla 1 (programa_)

    sentencia           ir al estado 27
    declaracion         ir al estado 11
    iteracion           ir al estado 12
    seleccion           ir al estado 13
    seleccion_con_else  ir al estado 14
    seleccion_sin_else  ir al estado 15
    asignacion          ir al estado 16
    imprimir            ir al estado 17
    leer                ir al estado 18


estado 10

    3 programa: sentencia .

    $default  reduce usando la regla 3 (programa)


estado 11

    9 sentencia: declaracion .

    $default  reduce usando la regla 9 (sentencia)


estado 12

    4 sentencia: iteracion .

    $default  reduce usando la regla 4 (sentencia)


estado 13

    5 sentencia: seleccion .

    $default  reduce usando la regla 5 (sentencia)


estado 14

   19 seleccion: seleccion_con_else .

    $default  reduce usando la regla 19 (seleccion)


estado 15

   20 seleccion: seleccion_sin_else .

    $default  reduce usando la regla 20 (seleccion)


estado 16

    6 sentencia: asignacion .

    $default  reduce usando la regla 6 (sentencia)


estado 17

    7 sentencia: imprimir .

    $default  reduce usando la regla 7 (sentencia)


estado 18

    8 sentencia: leer .

    $default  reduce usando la regla 8 (sentencia)


estado 19

   26 asignacion: ID_T OP_AS . expresion SEP_LINEA

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    expresion  ir al estado 34
    termino    ir al estado 35
    elemento   ir al estado 36


estado 20

   22 seleccion_con_else: IF_T PARENT_A . condicion PARENT_C argumento_sel ELSE_T $@3 argumento_sel
   23 seleccion_sin_else: IF_T PARENT_A . condicion PARENT_C argumento_sel

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 37
    TOKEN_NOT     desplazar e ir al estado 38
    MAX_TOKEN     desplazar e ir al estado 33

    condicion    ir al estado 39
    comparacion  ir al estado 40
    expresion    ir al estado 41
    termino      ir al estado 35
    elemento     ir al estado 36


estado 21

   18 iteracion: WHILE_T $@1 . PARENT_A condicion PARENT_C LLAVE_A programa $@2 LLAVE_C

    PARENT_A  desplazar e ir al estado 42


estado 22

   10 declaracion: DIM_T OP_MENOR . dupla_asig OP_MAYOR

    ID_T  desplazar e ir al estado 43

    dupla_asig  ir al estado 44


estado 23

   29 imprimir: TOKEN_PUT $@4 . elemento SEP_LINEA

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    elemento  ir al estado 45


estado 24

   30 leer: GET_T ID_T . SEP_LINEA

    SEP_LINEA  desplazar e ir al estado 46


estado 25

   27 asignacion: CONST_T ID_T . OP_AS expresion SEP_LINEA

    OP_AS  desplazar e ir al estado 47


estado 26

    0 $accept: programa_ $end .

    $default  aceptar


estado 27

    2 programa: programa sentencia .

    $default  reduce usando la regla 2 (programa)


estado 28

   55 elemento: CONST_INT .

    $default  reduce usando la regla 55 (elemento)


estado 29

   56 elemento: CONST_FLOAT .

    $default  reduce usando la regla 56 (elemento)


estado 30

   57 elemento: CONST_STRING .

    $default  reduce usando la regla 57 (elemento)


estado 31

   54 elemento: ID_T .

    $default  reduce usando la regla 54 (elemento)


estado 32

   51 elemento: PARENT_A . expresion PARENT_C

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    expresion  ir al estado 48
    termino    ir al estado 35
    elemento   ir al estado 36


estado 33

   53 elemento: MAX_TOKEN . $@7 PARENT_A argumentos PARENT_C

    $default  reduce usando la regla 52 ($@7)

    $@7  ir al estado 49


estado 34

   26 asignacion: ID_T OP_AS expresion . SEP_LINEA
   45 expresion: expresion . OP_SUM termino
   46          | expresion . OP_MENOS termino

    OP_SUM     desplazar e ir al estado 50
    OP_MENOS   desplazar e ir al estado 51
    SEP_LINEA  desplazar e ir al estado 52


estado 35

   47 expresion: termino .
   48 termino: termino . OP_MUL elemento
   49        | termino . OP_DIVISION elemento

    OP_DIVISION  desplazar e ir al estado 53
    OP_MUL       desplazar e ir al estado 54

    $default  reduce usando la regla 47 (expresion)


estado 36

   50 termino: elemento .

    $default  reduce usando la regla 50 (termino)


estado 37

   38 comparacion: PARENT_A . expresion comparador termino PARENT_C
   51 elemento: PARENT_A . expresion PARENT_C

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    expresion  ir al estado 55
    termino    ir al estado 35
    elemento   ir al estado 36


estado 38

   36 condicion: TOKEN_NOT . comparacion

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 37
    MAX_TOKEN     desplazar e ir al estado 33

    comparacion  ir al estado 56
    expresion    ir al estado 41
    termino      ir al estado 35
    elemento     ir al estado 36


estado 39

   22 seleccion_con_else: IF_T PARENT_A condicion . PARENT_C argumento_sel ELSE_T $@3 argumento_sel
   23 seleccion_sin_else: IF_T PARENT_A condicion . PARENT_C argumento_sel
   33 condicion: condicion . TOKEN_AND $@5 comparacion
   35          | condicion . TOKEN_OR $@6 comparacion

    PARENT_C   desplazar e ir al estado 57
    TOKEN_AND  desplazar e ir al estado 58
    TOKEN_OR   desplazar e ir al estado 59


estado 40

   31 condicion: comparacion .

    $default  reduce usando la regla 31 (condicion)


estado 41

   37 comparacion: expresion . comparador termino
   45 expresion: expresion . OP_SUM termino
   46          | expresion . OP_MENOS termino

    OP_DISTINTO    desplazar e ir al estado 60
    OP_COMP        desplazar e ir al estado 61
    OP_MAYORIGUAL  desplazar e ir al estado 62
    OP_MAYOR       desplazar e ir al estado 63
    OP_MENOR       desplazar e ir al estado 64
    OP_MENORIGUAL  desplazar e ir al estado 65
    OP_SUM         desplazar e ir al estado 50
    OP_MENOS       desplazar e ir al estado 51

    comparador  ir al estado 66


estado 42

   18 iteracion: WHILE_T $@1 PARENT_A . condicion PARENT_C LLAVE_A programa $@2 LLAVE_C

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 37
    TOKEN_NOT     desplazar e ir al estado 38
    MAX_TOKEN     desplazar e ir al estado 33

    condicion    ir al estado 67
    comparacion  ir al estado 40
    expresion    ir al estado 41
    termino      ir al estado 35
    elemento     ir al estado 36


estado 43

   11 dupla_asig: ID_T . SEPARADOR_T dupla_asig SEPARADOR_T tipo
   12           | ID_T . OP_MAYOR AS_T OP_MENOR tipo

    OP_MAYOR     desplazar e ir al estado 68
    SEPARADOR_T  desplazar e ir al estado 69


estado 44

   10 declaracion: DIM_T OP_MENOR dupla_asig . OP_MAYOR

    OP_MAYOR  desplazar e ir al estado 70


estado 45

   29 imprimir: TOKEN_PUT $@4 elemento . SEP_LINEA

    SEP_LINEA  desplazar e ir al estado 71


estado 46

   30 leer: GET_T ID_T SEP_LINEA .

    $default  reduce usando la regla 30 (leer)


estado 47

   27 asignacion: CONST_T ID_T OP_AS . expresion SEP_LINEA

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    expresion  ir al estado 72
    termino    ir al estado 35
    elemento   ir al estado 36


estado 48

   45 expresion: expresion . OP_SUM termino
   46          | expresion . OP_MENOS termino
   51 elemento: PARENT_A expresion . PARENT_C

    PARENT_C  desplazar e ir al estado 73
    OP_SUM    desplazar e ir al estado 50
    OP_MENOS  desplazar e ir al estado 51


estado 49

   53 elemento: MAX_TOKEN $@7 . PARENT_A argumentos PARENT_C

    PARENT_A  desplazar e ir al estado 74


estado 50

   45 expresion: expresion OP_SUM . termino

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    termino   ir al estado 75
    elemento  ir al estado 36


estado 51

   46 expresion: expresion OP_MENOS . termino

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    termino   ir al estado 76
    elemento  ir al estado 36


estado 52

   26 asignacion: ID_T OP_AS expresion SEP_LINEA .

    $default  reduce usando la regla 26 (asignacion)


estado 53

   49 termino: termino OP_DIVISION . elemento

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    elemento  ir al estado 77


estado 54

   48 termino: termino OP_MUL . elemento

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    elemento  ir al estado 78


estado 55

   38 comparacion: PARENT_A expresion . comparador termino PARENT_C
   45 expresion: expresion . OP_SUM termino
   46          | expresion . OP_MENOS termino
   51 elemento: PARENT_A expresion . PARENT_C

    OP_DISTINTO    desplazar e ir al estado 60
    OP_COMP        desplazar e ir al estado 61
    OP_MAYORIGUAL  desplazar e ir al estado 62
    OP_MAYOR       desplazar e ir al estado 63
    OP_MENOR       desplazar e ir al estado 64
    OP_MENORIGUAL  desplazar e ir al estado 65
    PARENT_C       desplazar e ir al estado 73
    OP_SUM         desplazar e ir al estado 50
    OP_MENOS       desplazar e ir al estado 51

    comparador  ir al estado 79


estado 56

   36 condicion: TOKEN_NOT comparacion .

    $default  reduce usando la regla 36 (condicion)


estado 57

   22 seleccion_con_else: IF_T PARENT_A condicion PARENT_C . argumento_sel ELSE_T $@3 argumento_sel
   23 seleccion_sin_else: IF_T PARENT_A condicion PARENT_C . argumento_sel

    ID_T       desplazar e ir al estado 1
    IF_T       desplazar e ir al estado 2
    LLAVE_A    desplazar e ir al estado 80
    WHILE_T    desplazar e ir al estado 3
    DIM_T      desplazar e ir al estado 4
    TOKEN_PUT  desplazar e ir al estado 5
    GET_T      desplazar e ir al estado 6
    CONST_T    desplazar e ir al estado 7

    sentencia           ir al estado 81
    declaracion         ir al estado 11
    iteracion           ir al estado 12
    seleccion           ir al estado 13
    seleccion_con_else  ir al estado 14
    seleccion_sin_else  ir al estado 15
    argumento_sel       ir al estado 82
    asignacion          ir al estado 16
    imprimir            ir al estado 17
    leer                ir al estado 18


estado 58

   33 condicion: condicion TOKEN_AND . $@5 comparacion

    $default  reduce usando la regla 32 ($@5)

    $@5  ir al estado 83


estado 59

   35 condicion: condicion TOKEN_OR . $@6 comparacion

    $default  reduce usando la regla 34 ($@6)

    $@6  ir al estado 84


estado 60

   39 comparador: OP_DISTINTO .

    $default  reduce usando la regla 39 (comparador)


estado 61

   40 comparador: OP_COMP .

    $default  reduce usando la regla 40 (comparador)


estado 62

   41 comparador: OP_MAYORIGUAL .

    $default  reduce usando la regla 41 (comparador)


estado 63

   42 comparador: OP_MAYOR .

    $default  reduce usando la regla 42 (comparador)


estado 64

   44 comparador: OP_MENOR .

    $default  reduce usando la regla 44 (comparador)


estado 65

   43 comparador: OP_MENORIGUAL .

    $default  reduce usando la regla 43 (comparador)


estado 66

   37 comparacion: expresion comparador . termino

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    termino   ir al estado 85
    elemento  ir al estado 36


estado 67

   18 iteracion: WHILE_T $@1 PARENT_A condicion . PARENT_C LLAVE_A programa $@2 LLAVE_C
   33 condicion: condicion . TOKEN_AND $@5 comparacion
   35          | condicion . TOKEN_OR $@6 comparacion

    PARENT_C   desplazar e ir al estado 86
    TOKEN_AND  desplazar e ir al estado 58
    TOKEN_OR   desplazar e ir al estado 59


estado 68

   12 dupla_asig: ID_T OP_MAYOR . AS_T OP_MENOR tipo

    AS_T  desplazar e ir al estado 87


estado 69

   11 dupla_asig: ID_T SEPARADOR_T . dupla_asig SEPARADOR_T tipo

    ID_T  desplazar e ir al estado 43

    dupla_asig  ir al estado 88


estado 70

   10 declaracion: DIM_T OP_MENOR dupla_asig OP_MAYOR .

    $default  reduce usando la regla 10 (declaracion)


estado 71

   29 imprimir: TOKEN_PUT $@4 elemento SEP_LINEA .

    $default  reduce usando la regla 29 (imprimir)


estado 72

   27 asignacion: CONST_T ID_T OP_AS expresion . SEP_LINEA
   45 expresion: expresion . OP_SUM termino
   46          | expresion . OP_MENOS termino

    OP_SUM     desplazar e ir al estado 50
    OP_MENOS   desplazar e ir al estado 51
    SEP_LINEA  desplazar e ir al estado 89


estado 73

   51 elemento: PARENT_A expresion PARENT_C .

    $default  reduce usando la regla 51 (elemento)


estado 74

   53 elemento: MAX_TOKEN $@7 PARENT_A . argumentos PARENT_C

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    expresion   ir al estado 90
    termino     ir al estado 35
    elemento    ir al estado 36
    argumentos  ir al estado 91


estado 75

   45 expresion: expresion OP_SUM termino .
   48 termino: termino . OP_MUL elemento
   49        | termino . OP_DIVISION elemento

    OP_DIVISION  desplazar e ir al estado 53
    OP_MUL       desplazar e ir al estado 54

    $default  reduce usando la regla 45 (expresion)


estado 76

   46 expresion: expresion OP_MENOS termino .
   48 termino: termino . OP_MUL elemento
   49        | termino . OP_DIVISION elemento

    OP_DIVISION  desplazar e ir al estado 53
    OP_MUL       desplazar e ir al estado 54

    $default  reduce usando la regla 46 (expresion)


estado 77

   49 termino: termino OP_DIVISION elemento .

    $default  reduce usando la regla 49 (termino)


estado 78

   48 termino: termino OP_MUL elemento .

    $default  reduce usando la regla 48 (termino)


estado 79

   38 comparacion: PARENT_A expresion comparador . termino PARENT_C

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 32
    MAX_TOKEN     desplazar e ir al estado 33

    termino   ir al estado 92
    elemento  ir al estado 36


estado 80

   24 argumento_sel: LLAVE_A . programa LLAVE_C

    ID_T       desplazar e ir al estado 1
    IF_T       desplazar e ir al estado 2
    WHILE_T    desplazar e ir al estado 3
    DIM_T      desplazar e ir al estado 4
    TOKEN_PUT  desplazar e ir al estado 5
    GET_T      desplazar e ir al estado 6
    CONST_T    desplazar e ir al estado 7

    programa            ir al estado 93
    sentencia           ir al estado 10
    declaracion         ir al estado 11
    iteracion           ir al estado 12
    seleccion           ir al estado 13
    seleccion_con_else  ir al estado 14
    seleccion_sin_else  ir al estado 15
    asignacion          ir al estado 16
    imprimir            ir al estado 17
    leer                ir al estado 18


estado 81

   25 argumento_sel: sentencia .

    $default  reduce usando la regla 25 (argumento_sel)


estado 82

   22 seleccion_con_else: IF_T PARENT_A condicion PARENT_C argumento_sel . ELSE_T $@3 argumento_sel
   23 seleccion_sin_else: IF_T PARENT_A condicion PARENT_C argumento_sel .

    ELSE_T  desplazar e ir al estado 94

    ELSE_T    [reduce usando la regla 23 (seleccion_sin_else)]
    $default  reduce usando la regla 23 (seleccion_sin_else)


estado 83

   33 condicion: condicion TOKEN_AND $@5 . comparacion

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 37
    MAX_TOKEN     desplazar e ir al estado 33

    comparacion  ir al estado 95
    expresion    ir al estado 41
    termino      ir al estado 35
    elemento     ir al estado 36


estado 84

   35 condicion: condicion TOKEN_OR $@6 . comparacion

    CONST_INT     desplazar e ir al estado 28
    CONST_FLOAT   desplazar e ir al estado 29
    CONST_STRING  desplazar e ir al estado 30
    ID_T          desplazar e ir al estado 31
    PARENT_A      desplazar e ir al estado 37
    MAX_TOKEN     desplazar e ir al estado 33

    comparacion  ir al estado 96
    expresion    ir al estado 41
    termino      ir al estado 35
    elemento     ir al estado 36


estado 85

   37 comparacion: expresion comparador termino .
   48 termino: termino . OP_MUL elemento
   49        | termino . OP_DIVISION elemento

    OP_DIVISION  desplazar e ir al estado 53
    OP_MUL       desplazar e ir al estado 54

    $default  reduce usando la regla 37 (comparacion)


estado 86

   18 iteracion: WHILE_T $@1 PARENT_A condicion PARENT_C . LLAVE_A programa $@2 LLAVE_C

    LLAVE_A  desplazar e ir al estado 97


estado 87

   12 dupla_asig: ID_T OP_MAYOR AS_T . OP_MENOR tipo

    OP_MENOR  desplazar e ir al estado 98


estado 88

   11 dupla_asig: ID_T SEPARADOR_T dupla_asig . SEPARADOR_T tipo

    SEPARADOR_T  desplazar e ir al estado 99


estado 89

   27 asignacion: CONST_T ID_T OP_AS expresion SEP_LINEA .

    $default  reduce usando la regla 27 (asignacion)


estado 90

   45 expresion: expresion . OP_SUM termino
   46          | expresion . OP_MENOS termino
   61 argumentos: expresion .

    OP_SUM    desplazar e ir al estado 50
    OP_MENOS  desplazar e ir al estado 51

    $default  reduce usando la regla 61 (argumentos)


estado 91

   53 elemento: MAX_TOKEN $@7 PARENT_A argumentos . PARENT_C
   60 argumentos: argumentos . $@8 SEPARADOR_T $@9 expresion

    PARENT_C  desplazar e ir al estado 100

    $default  reduce usando la regla 58 ($@8)

    $@8  ir al estado 101


estado 92

   38 comparacion: PARENT_A expresion comparador termino . PARENT_C
   48 termino: termino . OP_MUL elemento
   49        | termino . OP_DIVISION elemento

    PARENT_C     desplazar e ir al estado 102
    OP_DIVISION  desplazar e ir al estado 53
    OP_MUL       desplazar e ir al estado 54


estado 93

    2 programa: programa . sentencia
   24 argumento_sel: LLAVE_A programa . LLAVE_C

    ID_T       desplazar e ir al estado 1
    IF_T       desplazar e ir al estado 2
    LLAVE_C    desplazar e ir al estado 103
    WHILE_T    desplazar e ir al estado 3
    DIM_T      desplazar e ir al estado 4
    TOKEN_PUT  desplazar e ir al estado 5
    GET_T      desplazar e ir al estado 6
    CONST_T    desplazar e ir al estado 7

    sentencia           ir al estado 27
    declaracion         ir al estado 11
    iteracion           ir al estado 12
    seleccion           ir al estado 13
    seleccion_con_else  ir al estado 14
    seleccion_sin_else  ir al estado 15
    asignacion          ir al estado 16
    imprimir            ir al estado 17
    leer                ir al estado 18


estado 94

   22 seleccion_con_else: IF_T PARENT_A condicion PARENT_C argumento_sel ELSE_T . $@3 argumento_sel

    $default  reduce usando la regla 21 ($@3)

    $@3  ir al estado 104


estado 95

   33 condicion: condicion TOKEN_AND $@5 comparacion .

    $default  reduce usando la regla 33 (condicion)


estado 96

   35 condicion: condicion TOKEN_OR $@6 comparacion .

    $default  reduce usando la regla 35 (condicion)


estado 97

   18 iteracion: WHILE_T $@1 PARENT_A condicion PARENT_C LLAVE_A . programa $@2 LLAVE_C

    ID_T       desplazar e ir al estado 1
    IF_T       desplazar e ir al estado 2
    WHILE_T    desplazar e ir al estado 3
    DIM_T      desplazar e ir al estado 4
    TOKEN_PUT  desplazar e ir al estado 5
    GET_T      desplazar e ir al estado 6
    CONST_T    desplazar e ir al estado 7

    programa            ir al estado 105
    sentencia           ir al estado 10
    declaracion         ir al estado 11
    iteracion           ir al estado 12
    seleccion           ir al estado 13
    seleccion_con_else  ir al estado 14
    seleccion_sin_else  ir al estado 15
    asignacion          ir al estado 16
    imprimir            ir al estado 17
    leer                ir al estado 18


estado 98

   12 dupla_asig: ID_T OP_MAYOR AS_T OP_MENOR . tipo

    FLOAT_T    desplazar e ir al estado 106
    INTEGER_T  desplazar e ir al estado 107
    STRING_T   desplazar e ir al estado 108

    tipo  ir al estado 109


estado 99

   11 dupla_asig: ID_T SEPARADOR_T dupla_asig SEPARADOR_T . tipo

    FLOAT_T    desplazar e ir al estado 106
    INTEGER_T  desplazar e ir al estado 107
    STRING_T   desplazar e ir al estado 108

    tipo  ir al estado 110


estado 100

   53 elemento: MAX_TOKEN $@7 PARENT_A argumentos PARENT_C .

    $default  reduce usando la regla 53 (elemento)


estado 101

   60 argumentos: argumentos $@8 . SEPARADOR_T $@9 expresion

    SEPARADOR_T  desplazar e ir al estado 111


estado 102

   38 comparacion: PARENT_A expresion comparador termino PARENT_C .

    $default  reduce usando la regla 38 (comparacion)


estado 103

   24 argumento_sel: LLAVE_A programa LLAVE_C .
